<?xml version="1.0" encoding="utf-8"?>
<!--
/* //device/apps/common/assets/res/any/strings.xml
**
** Copyright 2006, The Android Open Source Project
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>
    <string name="app_label">Spare Parts</string>

    <string name="device_info_title">Device info</string>
    
    <string name="title_battery_history">Battery history</string>
    <string name="summary_battery_history">Summary of how battery has been used</string>
    
    <string name="title_battery_information">Battery information</string>
    <string name="summary_battery_information">Current battery status information</string>
    
    <string name="title_usage_statistics">Usage statistics</string>
    <string name="summary_usage_statistics">Summary of application usage</string>
    
    <string name="general_title">General</string>
    
    <string name="title_window_animations">Window animations</string>
    <string name="summary_window_animations">Speed of animations in individual windows</string>
    <string name="dialog_title_window_animations">Select window speed</string>
    
    <string name="title_transition_animations">Transition animations</string>
    <string name="summary_transition_animations">Speed of animations moving between screens</string>
    <string name="dialog_title_transition_animations">Select transition speed</string>
    
    <string name="title_fancy_ime_animations">Fancy input animations</string>
    <string name="summary_on_fancy_ime_animations">Use fancier animations for input method windows</string>
    <string name="summary_off_fancy_ime_animations">Use normal animations for input method windows</string>
    
    <string name="title_haptic_feedback">Haptic feedback</string>
    <string name="summary_on_haptic_feedback">Use haptic feedback with user interaction</string>
    <string name="summary_off_haptic_feedback">Use haptic feedback with user interaction</string>
    
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">Overall size of fonts</string>
    <string name="dialog_title_font_size">Select font size</string>
    
    <string name="title_end_button">End button behavior</string>
    <string name="summary_end_button">Select End (red) button action</string>
    <string name="dialog_title_end_button">Select End button</string>
    
    <string name="applications_title">Applications</string>
    
    <string name="title_maps_compass">Show compass in Maps</string>
    <string name="summary_on_maps_compass">Compass is displayed in Maps</string>
    <string name="summary_off_maps_compass">Compass is not displayed in Maps</string>
    
    <string name="development_settings_show_maps_compass_text">Show compass in Maps</string>

    <!-- Sound & display settings screen, compatibility mode check box label -->
    <string name="compatibility_mode_title">Compatibility Mode</string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is selected -->
    <string name="compatibility_mode_summary_on">Run older apps in Compatibility mode. This require rebooting. </string>
    <!-- Sound & display settings screen, compatibility mode option summary text when check box is clear -->
    <string name="compatibility_mode_summary_off">Run older apps in Compatibility mode. This require rebooting. </string>
</resources>
