<?xml version="1.0" encoding="UTF-8"?>
<!--
/*
 * Copyright 2008, The Android Open Source Project
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/device_info_title">

        <PreferenceScreen android:key="battery_history_settings"
                android:title="@string/title_battery_history" 
                android:summary="@string/summary_battery_history">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.fuelgauge.PowerUsageSummary" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="battery_information_settings"
                android:title="@string/title_battery_information" 
                android:summary="@string/summary_battery_information">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.BatteryInfo" />
        </PreferenceScreen>
        
        <PreferenceScreen android:key="usage_statistics_settings"
                android:title="@string/title_usage_statistics" 
                android:summary="@string/summary_usage_statistics">
            <intent android:action="android.intent.action.MAIN"
                    android:targetPackage="com.android.settings"
                    android:targetClass="com.android.settings.UsageStats" />
        </PreferenceScreen>
        
    </PreferenceCategory>
            
    <PreferenceCategory
        android:title="@string/general_title">
        
        <ListPreference
                android:key="window_animations"
                android:title="@string/title_window_animations"
                android:summary="@string/summary_window_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_window_animations" />
                
        <ListPreference
                android:key="transition_animations"
                android:title="@string/title_transition_animations"
                android:summary="@string/summary_transition_animations"
                android:entries="@array/entries_animations"
                android:entryValues="@array/entryvalues_animations"
                android:dialogTitle="@string/dialog_title_transition_animations" />
        
        <CheckBoxPreference 
            android:key="fancy_ime_animations" 
            android:title="@string/title_fancy_ime_animations" 
            android:summaryOn="@string/summary_on_fancy_ime_animations"
            android:summaryOff="@string/summary_off_fancy_ime_animations"/>
        
        <ListPreference
                android:key="font_size"
                android:title="@string/title_font_size"
                android:summary="@string/summary_font_size"
                android:entries="@array/entries_font_size"
                android:entryValues="@array/entryvalues_font_size"
                android:dialogTitle="@string/dialog_title_font_size" />
        
        <ListPreference
                android:key="end_button"
                android:title="@string/title_end_button"
                android:summary="@string/summary_end_button"
                android:entries="@array/entries_end_button"
                android:entryValues="@array/entryvalues_end_button"
                android:dialogTitle="@string/dialog_title_end_button" />
        
        <CheckBoxPreference 
            android:key="haptic_feedback" 
            android:title="@string/title_haptic_feedback" 
            android:summaryOn="@string/summary_on_haptic_feedback"
            android:summaryOff="@string/summary_off_haptic_feedback"/>
        

        <CheckBoxPreference
                android:key="compatibility_mode"
                android:title="@string/compatibility_mode_title"
                android:summaryOn="@string/compatibility_mode_summary_on"
                android:summaryOff="@string/compatibility_mode_summary_off" />
    </PreferenceCategory>

</PreferenceScreen>
